--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -39,7 +39,8 @@
 //.... link:walkthroughs/elkStack.adoc[ELK Logging]
 ... link:walkthroughs/local-build.adoc[Local Build]
 .... link:walkthroughs/local-docker.adoc[Docker Compose]
-.... link:walkthroughs/local-kubernetes.adoc[Kubernetes]
+.... link:walkthroughs/local-k8s.adoc[Kubernetes]
+.... link:walkthroughs/local-k8s-istio.adoc[Kubernetes]
 .... link:walkthroughs/git.adoc[Git]
 .... link:walkthroughs/adding_your_own_sso_apps_for_local_testing.adoc[Social Login]
 // -- WALKTHROUGHS: SCALE--
